<resources>
    <string name="app_name">BOTS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">Kort</string>
    <string name="title_activity_start_screen">BOTS</string>
    <string name="title_activity_player_select">Vælg spiller</string>
    <string name="BOTS_head">Battle of the students!</string>
    <string name="select_button_text">Vælg</string>
    <string name="title_activity_player_chosen">Historie</string>
    <string name="BOTS_welcome_text">Velkommen til Battle of The Students.</string>
    <string name="anna_intro_text">Anna er en 22-årig universitetsstuderende. Hun studerer lingvistik på 2. år og er kærester med Enrique, en 24-årig universitetsstuderende fra Brasilien. Anna og Enrique har været sammen siden før hun begyndte på universitetet og de vanvittigt forelskede. Hvis du spurgte deres venner, ville de alle mene at Anna og Enrique skulle giftes. Ja, de ville måske endda mene at de var hinandens “eneste ene”.</string>
    <string name="anna_intro2_text">På en almindelig torsdag eftermiddag, er Anna igang med at læse op på Akustisk Analyse, da hun pludselig får en besked fra Enrique...</string>
    <string name="anna_intro3_text">SMS-besked: “Hola Anna, jeg har lige fået en brev fra universitetet! Den siger at de har hævet prisen for at gå på universitetet til 30.000 pr. år! Det har jeg ikke nok dinero til! Jeg tror jeg er nødt til at rejse hjem! :/ Te amo, Enrique”</string>
    <string name="anna_intro4_text">Narrator: ”Anna bliver forskrækket ved synet af beskeden. Hun kan slet ikke forestille sig livet uden Enrique! Anna er lige på nippet til at bryde sammen i gråd, da hun husker hvad hendes veninder sagde i går. De foreslog nemlig at Anna skulle stille op som “Student-president”! Anna er vellidt på hele universitetet for sin udadvendte natur og sine akademiske evner, og så vidt hun husker, var der også en pengepræmie på (tilfældigvis) netop 30.000 kr. Efter kort tids overvejelse, vælger Anna at melde sig ind i den store valgkampagne og begynder at lave de nødvendige forberedelser.</string>
    <string name="ivan_intro_text">Ivan er en 24-årig universitetsstuderende. Han studerer matematik på 3. år og hans største ønske er at høre hans far sige “Jeg er stolt af dig, søn!”. Ivans søde og altid hjælpsomme mor har hjulpet ham gennem hele livet, og elsker ham rigtig højt. Selvom Ivan ønsker at gøre hans far stolt, så vil han ikke ødelægge forholdet til hans mor, da hun altid har været der for ham, og hvis det ikke var for hende, så ville han aldrig besøge hans krævende og pessimistiske far</string>
    <string name="ivan_intro2_text">Narrator: “På en almindelig torsdag eftermiddag, er Ivan igang med at læse op på Målteori, da han pludselig får en besked fra hans mor…”</string>
    <string name="ivan_intro3_text">SMS-besked: “Hej skattemusse! Din far var ude og hygge sig med Igor i aftes og de fik vidst en smule for meget vodka, da de var ude og fiske. Din far har fået ind i hovedet at han vil skrive dig ud af testamentet. Jeg har gjort alt for at tale ham fra det, men han er ikke til at hugge og stikke i. Han siger at han vil se om du udretter noget de næste måneder, og måske give dig en chance derefter. Jeg ved at du har rigtig travlt på dit studie og du ved at jeg er rigtig stolt af dig, men det er nu du har chancen for at bevise dit værd overfor din far! Jeg har hørt at der snart skal vælges en Student-president på Universitetet! Hvis du kunne blive dette så ved jeg at din far ikke vil kunne nægte at du har udrettet noget, og samtidigt er der en pengepræmie som kunne supplere din SU! Jeg håber du beslutter dig for at give det et forsøg, jeg ønsker intet andet end at han indser hvor dygtig du er! Knus fra mor.”</string>
    <string name="ivan_intro4_text">Narrator: “Ivan bliver rigtig ked af hans fars beslutning, men er glad for at høre de søde ord fra hans mor. Han beslutter sig at give Student-president kampagnen et forsøg, ikke mindst for at bevise sit værd overfor sin far, men også for hans mors skyld. Det må være hårdt at være klemt mellem ham og hans åndssvage far. Ivan går straks igang med at lave de nødvendige forberedelser”</string>
    <string name="bent_intro_text">Bent er en 22-årig universitetsstuderende. Han studerer Studerer Marketing and Management Communication på AU. Han er i gang med 2. år og bor for sig selv, men har boet hos sin bedstefar, som han har et godt forhold til. Bent har altid været lidt af en gambler. For nyligt tabte han 20.000 kroner i en pokerturnering, for penge han havde lånt af en lånehaj.</string>
    <string name="bent_intro2_text">Narrator: “På en almindelig torsdag eftermiddag, er Bent i gang med at læse op på Accounting, da han pludselig får en besked fra hans bedstefar…”</string>
    <string name="bent_intro3_text">SMS-besked: “HVOR ER MINE PENGE, BENT? Du lånte 20k for alt for lang tid siden og jeg savner dem sgu! Hvor er de!? Du har en måned, Bent - ikke en dag mere! Du ved hvor de skal afleveres, og du ved hvad renterne er! Du ved også godt hvem der sendte den her besked, men hvis du er helt tabt bag en vogn, så er det Carsten Knæ-knuser her! Og gæt hvorfor jeg fik tilnavnet! Pengene, Bent! Kom med dem!”</string>
    <string name="bent_intro4_text">Narrator: “Bent blev rigtig bange da han så beskeden fra Carsten Knæ-knuser. Han kom i tanke om at hans kammerat Flemming overvejede at deltage i valgkampagnen om Student Presidency og at der vidst nok var en pengepræmie. Han beslutter sig at Student-president kampagnen er sidste udvej og går straks igang med at lave de nødvendige forberedelser”</string>
    <string name="title_activity_mini_game_main">MiniGame</string>
    <string name="title_activity_orientation">OrientationActivity</string>
    <string name="game_instructions">Velkommen til Kemi minigamet! Din opgave er at hælde én kemiske væske ned i en anden, så hurtigt som muligt. Pas dog på, at du ikke hælder for hurtigt, da dette vil få din kemiske blanding til at forringes hurtigt! Når du har nået 100 point, er de kemiske væsker blevet blandet succesfuldt! Held og lykke!</string>
    <string name="xyz_text">"X: Y: Z:"</string>
    <string name="i_text">"i: "</string>
    <string name="time_text">"Tid: "</string>
    <string name="next_text">Næste</string>
    <string name="back_text">Tilbage</string>
    <string name="title_activity_score">Score</string>
    <string name="your_score_text">Din score: </string>
    <string name="tap_text">tryk på skærmen for at fortsætte</string>
    <string name="tap_tryagain_text">tryk på skærmen for at prøve igen</string>
    <string name="title_activity_case">Historie</string>
    <string name="anna_case1">Narrator: “Da Anna valgte at tage på et af de naturvidenskabelige fakulteter som det første, følte nogle af de studerende på de sproglige fakulteter sig forbigået. De følte ikke at de blev taget seriøst som fakultet, hvilket gjorde dem meget vrede!”</string>
    <string name="anna_case2">Narrator: “Efter Anna’s besøg ved det sproglige fakultet, følte nogle af de studerende på BSS sig forbigået. De følte ikke at Anna tog dem så seriøst som hun burde, hvilket gjorde bestemt en BSS’er meget vred!”</string>
    <string name="anna_case3">Narrator: “Efter Anna’s besøg på BSS, følte de studerende på de naturvidenskabelige sig forbigået. De ville hævne sig på Anna, og vidste præcis hvad de skulle gøre og hvem de skulle snakke med!”</string>
    <string name="anna_case4">Narrator: “Da Anna dernæst valgte at besøge et af de sproglige fakulteter, blev BSS’erne virkelig skuffede. Specielt en BSS’er reagerede meget stærkt!”</string>
    <string name="anna_case5">Narrator: “Da Anna derefter valgte at besøge BSS’erne, blev de naturvidenskabelige virkelig sure. De vidste dog godt hvordan de skulle hævne sig...”</string>
    <string name="anna_case6">Narrator: “Da Anna derefter valgte at besøge de naturvidenskabelige blev de sproglige virkelig utilfredse. Nogle spanskstuderende røg langt op i det røde felt”</string>
    <string name="anna_case7">Narrator: “Da Anna til sidst valgte at besøge de sproglige, blev BSS’erne rasende. De troede ikke Anna ville opsøge dem for at vinde stemmer, og dette gik ud over Enrique endnu en gang, på trods af at Enrique allerede har fået tæsk i fredagsbaren og er blevet smidt ud af festudvalget…”</string>
    <string name="anna_case8">Narrator: “Da Anna til sidst valgte at besøge de naturvidenskabelige, blev de sproglige rasende. De troede ikke Anna ville opsøge dem for at vinde stemmer, og dette gik ud over Enrique endnu en gang, på trods af at han allerede er blevet smidt ud af både festudvalget og af sin roommate…”</string>
    <string name="anna_case9">Narrator: “Da Anna til sidst valgte at besøge BSS’erne, blev de naturvidenskabelige rasende. De troede ikke Anna ville opsøge dem for at vinde stemmer, og dette gik ud over Enrique endnu en gang, på trods af at han allerede er blevet smidt ud af sin roommate og har fået tæsk i fredagsbaren…”</string>
    <string name="anna_case1_sms">SMS-besked fra Enrique: “Amado! Jeg ligger på hospitalet! Til spansk-fredagsbar, var der nogle af de studerende som kom hen til mig og begyndte at råbe af mig med nogle meget ubehagelige spanske ord. Ay ay ay, de bankede mig! Det er ikke noget alvorligt, men lægen siger, at jeg er nødt til at blive hjemme og slappe af de næste dage! Te amo, Enrique”</string>
    <string name="anna_case2_sms">SMS-besked fra Enrique: “Chiquita… Ralf er gået helt amok. Han er virkelig furioso! Han har smidt mig ud af lejligheden, mine ting står nede på gaden! Hvad sker der lige for ham? Te amo, Enrique”</string>
    <string name="anna_case3_sms">SMS-besked fra Enrique: “Hola chiquita. Af en eller anden mærkværdig grund er jeg blevet smidt ud af festudvalget nu… Noget med at jeg ikke tager det seriøst nok, whatever… Formanden er estúpido. Te amo, Enrique!”</string>
    <string name="anna_case4_sms">SMS-besked fra Enrique: “Hola! Ralf gik helt amok i dag… Jeg lå bare på sofaen, da han kom hjem og smed alle mine ting ud på gangen og sagde at jeg skulle skride… Han sagde ikke et ord om hvorfor, og gad ikke at høre på noget, men jeg gider ikke forsøge at snakke med en psykopat der reagerer sådan… Jeg har ingen ide om hvad jeg skal gøre, men jeg finder ud af noget.. håber jeg! Te amo, Enrique”</string>
    <string name="anna_case5_sms">SMS-besked fra Enrique: “Hola! Alting går galt! Jeg har lige fået at vide at jeg ikke længere er en del af festudvalget… Formanden kom forbi og sagde at han ikke synes jeg gjorde det godt nok, og at jeg ikke får en chance mere ovenpå sidste gang jeg ødelagde fadølsanlægget... På trods af at han sagde at det ikke gjorde noget for fire dage siden… Det hele er bare annoying for tiden! Te amo, Enrique”</string>
    <string name="anna_case6_sms">SMS-besked fra Enrique: “Amado! Jeg ligger på hospitalet! Til spansk-fredagsbar, var der nogle af de studerende som kom hen til mig og begyndte at råbe af mig med nogle meget ubehagelige spanske ord. Ay ay ay, de bankede mig! Det er ikke noget alvorligt, men lægen siger, at jeg er nødt til at blive hjemme og slappe af de næste dage! Te amo, Enrique”</string>
    <string name="anna_case7_sms">SMS-besked fra Enrique: “Mi ángel! Hele min verden falder sammen… Det eneste lyspunkt er dig! Hola! Ralf gik helt amok i dag… Jeg lå bare på sofaen, da han kom hjem og smed alle mine ting ud på gangen og sagde at jeg skulle skride… Han sagde ikke et ord om hvorfor, og gad ikke at høre på noget, men jeg gider ikke forsøge at snakke med en psykopat der reagerer sådan… Jeg har ingen ide om hvad jeg skal gøre, men jeg finder ud af noget.. håber jeg! Te amo, Enrique”</string>
    <string name="score_text">Score</string>
    <string name="fakultet_text">Fakulteter</string>
    <string name="back_button">Tilbage til kortet</string>
    <string name="stemmer_text">Stemmer</string>
</resources>