<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.9">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:id="@+id/table_layout">

            <TextView
                android:id="@+id/score"
                android:gravity="center_horizontal"
                android:text="@string/score_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/fakulteter"
                    android:text="@string/fakultet_text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/stemmer"
                    android:text="@string/stemmer_text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            
        </TableLayout>
    </ScrollView>
	<RelativeLayout
	     android:layout_width="fill_parent" 
	     android:orientation="horizontal"
	     android:layout_height="50dip">
	    <Button
	        android:id="@+id/back_button"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_centerHorizontal="true"
	        android:onClick="goBack"
	        android:text="@string/back_button" />
	    </RelativeLayout>

</LinearLayout>