<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayerSelect" >

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:orientation="vertical">

                    <TextView
                        android:padding="12dip"
                        android:id="@+id/anna_intro"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dip"
                        android:text="@string/anna_intro_text" />
                    
                    <Button
                        android:id="@+id/select_button2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_button_text"
          				android:onClick="goAnna" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:orientation="vertical">
                    
                    <TextView
                        android:padding="12dip"
                        android:id="@+id/ivan_intro"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dip"
                        android:text="@string/ivan_intro_text" />
                    
                    <Button
                        android:id="@+id/select_button1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_button_text"
          				android:onClick="goIvan" />
                        
                    
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:orientation="vertical">
                    
                    <TextView
                        android:padding="12dip"
                        android:id="@+id/bent_intro"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dip"
                        android:text="@string/bent_intro_text" />
                    
                    <Button
                        android:id="@+id/select_button3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_button_text"
          				android:onClick="goBent" />
                    
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
